# taskiq-scheduler

./: .env  .env.example  .env.test  .flake8  .gitignore  Dockerfile  Makefile  Makefile.dev  README.md  compose.yaml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
composes/grafana/: compose.yaml
composes/grafana/provisioning/dashboards/: beautiful-api-dashboard.json  fastapi-dashboard.json  postgresql-dashboard.json  taskiq-dashboard.json  throughput-dashboard.json
composes/grafana/provisioning/datasources/: datasources.yml
composes/nats/: compose.yaml
composes/pg/: compose.yaml
composes/prometheus/: compose.yaml  prometheus.yml
composes/rmq/: compose.yaml
migrations/: env.py
migrations/versions/: 0c1fc157dbc8_migration_to_taskiq.py  8dda69214994_init.py
src/api/: app.py
src/api/middlewares/: prometheus.py
src/api/routes/: health.py  tasks.py
src/application/schemas/: tasks.py
src/application/services/: task_service.py
src/core/: cancellation.py  circuit_breaker.py  config.py  enums.py
src/core/abstractions/: queue.py  repo.py
src/core/models/: paging.py
src/core/utils/: date.py  json.py  parse_url.py  retry.py  sql_validator.py
src/infra/: scheduler.py
src/infra/brokers/: nats_broker.py  worker.py
src/infra/clients/: grpc_client.py
src/infra/db/sqlalchemy/: session.py
src/infra/db/sqlalchemy/models/: base.py  entities.py
src/infra/metrics/: celery.py  fastapi_metrics.py  taskiq.py
src/infra/queues/: celery_task_queue.py  taskiq_task_queue.py
src/infra/repos/: base_repo.py
src/infra/tasks/: __init__.py  db_task.py
tests/: config.py  conftest.py
tests/fixtures/integration/: api_client.py  clean_db.py  task_service.py
tests/fixtures/unit/: task_service_mock.py
tests/integration/: conftest.py
tests/integration/apis/: test_tasks.py
tests/integration/queues/: test_task_queue.py
tests/unit/services/: test_task_service.py
tests/unit/tasks/: test_db_task.py
tests/unit/utils/: test_parse_url.py  test_sql_validator.py
