[project]
authors = [
  {name = "dreadew", email = "p74ur@yandex.ru"},
]
dependencies = [
  "python-dotenv (>=1.1.1,<2.0.0)",
  "sqlalchemy (>=2.0.43,<3.0.0)",
  "asyncpg (>=0.30.0,<0.31.0)",
  "pydantic (>=2.11.9,<3.0.0)",
  "fastapi (>=0.117.1,<0.118.0)",
  "prometheus-client (>=0.23.1,<0.24.0)",
  "uvicorn[standard] (>=0.36.0,<0.37.0)",
  "alembic (>=1.16.5,<2.0.0)",
  "psycopg2-binary (>=2.9.10,<3.0.0)",
  "pytest (>=8.4.2,<9.0.0)",
  "pytest-asyncio (>=1.2.0,<2.0.0)",
  "greenlet (>=3.2.4,<4.0.0)",
  "sqlalchemy-trino (>=0.5.0,<0.6.0)",
  "black (>=25.9.0,<26.0.0)",
  "isort (>=6.0.1,<7.0.0)",
  "flake8 (>=7.3.0,<8.0.0)",
  "bandit (>=1.7.5,<2.0.0)",
  "taskiq (>=0.11.18,<0.12.0)",
  "taskiq-nats (>=0.5.1,<0.6.0)",
  "nats-py (>=2.11.0,<3.0.0)",
  "taskiq-postgresql (>=0.1.4,<0.2.0)",
]
description = ""
license = {text = "MIT"}
name = "sql-recsys"
readme = "README.md"
requires-python = ">=3.11,<4.0"
version = "0.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[tool.black]
extend-exclude = '''
/(
  \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | __pycache__
  | migrations
)/
'''
include = '\.pyi?$'
line-length = 88
target-version = ['py311']

[tool.isort]
known_first_party = ["src", "tests"]
known_third_party = ["fastapi", "pydantic", "sqlalchemy", "taskiq", "pytest"]
line_length = 88
multi_line_output = 3
profile = "black"

[tool.pytest.ini_options]
addopts = [
  "-v",
  "--tb=short",
]
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]
markers = [
  "unit: Unit tests that don't require external dependencies",
  "integration: Integration tests that require external services (DB, queues, etc.)",
  "slow: Slow tests that take more time to execute",
  "xfail: Tests that are expected to fail",
  "asyncio: Async tests",
]
python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]

[dependency-groups]
dev = [
  "bandit (>=1.8.6,<2.0.0)",
]
